@@ -1,3 +1,8 @@
+2018-07-02 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bug-2764.c:
+	  Fix test for systems with int wider than 16 bits.
+
 2018-06-28 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/bug-2764.c,
